--- a/index.html
+++ b/index.html
@@ -3,47 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Samurai Adventure Game</title>
+  <title>2D Samurai Adventure Game</title>
   <script src="game.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-800 text-white font-mono">
 
-  <div class="container mx-auto p-4">
-    <!-- Game Title -->
-    <h1 class="text-3xl text-center font-bold mb-4">Samurai Adventure</h1>
+  <div class="container mx-auto p-4 text-center">
+    <h1 class="text-3xl font-bold mb-4">Samurai Adventure</h1>
 
-    <!-- Description Section -->
-    <div id="description" class="p-4 bg-gray-900 rounded-lg">
-      <p>Welcome to the world of samurais. Begin your journey by choosing a location.</p>
+    <!-- Character Selection -->
+    <div id="character-selection" class="mb-4">
+      <p>Select Your Character:</p>
+      <button class="character-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg mx-2" data-character="samurai">Samurai</button>
+      <button class="character-btn bg-green-600 hover:bg-green-700 p-2 rounded-lg mx-2" data-character="ninja">Ninja</button>
     </div>
 
-    <!-- Interaction Section -->
-    <div id="interaction" class="p-4 mt-4 bg-gray-700 rounded-lg">
-      <p>Select a location below to begin your journey:</p>
+    <!-- Canvas for Game -->
+    <div id="game-container" class="relative mx-auto bg-gray-900 rounded-lg w-[800px] h-[600px] hidden">
+      <canvas id="game-canvas" width="800" height="600"></canvas>
     </div>
 
-    <!-- Room Options -->
-    <div id="rooms" class="grid grid-cols-2 gap-4 mt-4">
-      <button class="room-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg" data-room="castle">Shogun's Castle</button>
-      <button class="room-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg" data-room="shrine">Mount Hikari Shrine</button>
-      <button class="room-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg" data-room="harbor">Kurokumo Harbor</button>
-      <button class="room-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg" data-room="village">Kiyama Village</button>
-      <button class="room-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg" data-room="forest">Bamboo Forest</button>
-      <button class="room-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg" data-room="battlefield">Crimson Battlefield</button>
-    </div>
-
-    <!-- Interaction Buttons -->
-    <div id="actions" class="hidden mt-4 space-y-2">
-      <button class="action-btn bg-red-600 hover:bg-red-700 p-2 rounded-lg" data-action="fight">Fight</button>
-      <button class="action-btn bg-green-600 hover:bg-green-700 p-2 rounded-lg" data-action="explore">Explore</button>
-      <button class="action-btn bg-yellow-600 hover:bg-yellow-700 p-2 rounded-lg" data-action="collect">Collect</button>
-    </div>
-
-    <!-- Game Status -->
-    <div id="status" class="mt-4 p-4 bg-gray-900 rounded-lg">
-      <p>Status: <span id="game-status">Neutral</span></p>
-    </div>
+    <!-- Instructions -->
+    <p id="instructions" class="mt-4 hidden">Use arrow keys to move your character.</p>
   </div>
 
 </body>
