--- a/index.html
+++ b/index.html
@@ -3,30 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>2D Samurai Adventure Game</title>
-  <script src="game.js" defer></script>
+  <title>Samurai Adventure - Story Mode</title>
+  <script src="story-game.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-800 text-white font-mono">
-
   <div class="container mx-auto p-4 text-center">
     <h1 class="text-3xl font-bold mb-4">Samurai Adventure</h1>
 
-    <!-- Character Selection -->
-    <div id="character-selection" class="mb-4">
-      <p>Select Your Character:</p>
-      <button class="character-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg mx-2" data-character="samurai">Samurai</button>
-      <button class="character-btn bg-green-600 hover:bg-green-700 p-2 rounded-lg mx-2" data-character="ninja">Ninja</button>
-    </div>
-
-    <!-- Canvas for Game -->
-    <div id="game-container" class="relative mx-auto bg-gray-900 rounded-lg w-[800px] h-[600px] hidden">
+    <!-- Game Display -->
+    <div id="game-container" class="relative mx-auto bg-gray-900 rounded-lg w-[800px] h-[600px]">
       <canvas id="game-canvas" width="800" height="600"></canvas>
     </div>
 
-    <!-- Instructions -->
-    <p id="instructions" class="mt-4 hidden">Use arrow keys to move your character.</p>
-  </div>
 
+
+    <div id="challenge-section" class="mt-4 bg-gray-700 p-4 rounded-lg hidden">
+        <p id="challenge-text">A challenge awaits you. Choose wisely:</p>
+        <div id="choices" class="mt-2 space-x-2">
+          <!-- Choices will be dynamically added here -->
+        </div>
+      </div>
+      
+
+
+
+
+    <!-- Interaction and Story -->
+    <div id="story-section" class="mt-4 bg-gray-700 p-4 rounded-lg">
+        <p id="story-text">Choose your starting location to begin your journey.</p>
+        <div id="actions" class="mt-2">
+          <button class="action-btn bg-blue-600 hover:bg-blue-700 p-2 rounded-lg hidden" id="move-btn">Move</button>
+          <button class="action-btn bg-green-600 hover:bg-green-700 p-2 rounded-lg hidden" id="interact-btn">Interact</button>
+          <button class="action-btn bg-red-600 hover:bg-red-700 p-2 rounded-lg" id="reset-btn">Reset</button>
+        </div>
+      </div>      
+  </div>
 </body>
 </html>
