--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       </div>
       
 
-
+      <div id="dialogue-box" class="absolute bottom-0 left-0 bg-gray-800 text-white p-4 w-full hidden">
+        <p id="dialogue-text"></p>
+      </div>
+      
 
 
     <!-- Interaction and Story -->
