added music and morality score

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Samurai Adventure - Story Mode</title>
     <script src="story-game.js" defer></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -27,15 +27,12 @@
         <div id="choices" class="mt-2 space-x-2"></div>
       </div>
 
-      <div
-        id="location-input-section"
-        class="mt-4 bg-gray-700 p-4 rounded-lg hidden"
-      >
+      <div id="location-input-section" class="mt-4 bg-gray-700 p-4 rounded-lg hidden">
         <p>Type the location you want to go to:</p>
         <input
           type="text"
           id="location-input"
-          class="bg-gray-800 text-white p-2 rounded-lg border-2 border-transparent"
+          class="bg-gray-800 text-white p-2 rounded-lg border-2 border-transparent focus:outline-none focus:border-blue-500"
           placeholder="Enter location name"
         />
         <button
@@ -44,9 +41,7 @@
         >
           Go
         </button>
-        <p id="location-error" class="text-red-500 hidden">
-          Invalid location. Try again.
-        </p>
+        <p id="location-error" class="text-red-500 hidden">Invalid location. Try again.</p>
       </div>
 
       <!-- Persistent Available Locations Section -->
@@ -59,6 +54,12 @@
       <div id="progress-section" class="mt-4 bg-gray-700 p-4 rounded-lg">
         <h2 class="text-xl font-bold mb-2">Progress:</h2>
         <p id="progress-text">Clues Found: 0/6</p>
+      </div>
+
+      <!-- Morality Score Section -->
+      <div id="morality-section" class="mt-4 bg-gray-700 p-4 rounded-lg">
+        <h2 class="text-xl font-bold mb-2">Morality:</h2>
+        <p id="morality-text">Morality: 0</p>
       </div>
 
       <!-- Interaction and Story -->
