--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <input
           type="text"
           id="location-input"
-          class="bg-gray-800 text-white p-2 rounded-lg border-2 border-transparent focus:outline-none focus:border-blue-500"
+          class="bg-gray-800 text-white p-2 rounded-lg border-2 border-transparent"
           placeholder="Enter location name"
         />
         <button
@@ -61,11 +61,6 @@
       <div id="progress-section" class="mt-4 bg-gray-700 p-4 rounded-lg">
         <h2 class="text-xl font-bold mb-2">Progress:</h2>
         <p id="progress-text">Clues Found: 0/6</p>
-      </div>
-
-      <div id="morality-section" class="mt-4 bg-gray-700 p-4 rounded-lg">
-        <h2 class="text-xl font-bold mb-2">Morality:</h2>
-        <p id="morality-text">Morality: 0</p>
       </div>
 
       <div id="story-section" class="mt-4 bg-gray-700 p-4 rounded-lg">
